<resources>
    <string name="app_name">想她</string>
    <string name="agora_app_id" translatable="false">aab8b8f5a8cd4469a63042fcfafe7063</string>
    <string name="company">钻石</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_day">日</string>
    <string name="time_month">月</string>
    <string name="time_year">年</string>
    <string name="time_more">99+</string>
    <string name="home_conversation_tab">会话</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="downloading">正在下载，请稍候</string>
    <string name="download_fail">下载失败</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
    <string name="save_exist">文件已存在</string>
    <string name="save_succ">保存成功</string>
    <string name="chat_file">文件</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_up_finger">手指上滑，取消发送</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_audio_too_long">录音过长，请重试</string>
    <string name="chat_video_too_short">录制过短，请重试</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_pullback">撤回</string>
    <string name="chat_del">删除</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="login">立即登录</string>
    <string name="login_success">登录成功</string>
    <string name="set_nickname">设置昵称</string>
    <string name="nickname_not_empty">昵称不能为空！</string>
    <string name="black_list">黑名单</string>
    <string name="loading">加载中...</string>
    <string name="not_empty">不能为空！</string>
    <string name="edit_auth_info">编辑认证资料</string>
    <string name="mobile">手机登录</string>
    <string name="height">身高</string>
    <string name="edit_input_height">请设置身高（必填）</string>
    <string name="weight">体重</string>
    <string name="edit_input_weight">请设置体重（必填）</string>
    <string name="constellation">星座</string>
    <string name="edit_auth_set_constellation">请设置星座（必填）</string>
    <string name="edit_introduce">个人介绍</string>
    <string name="edit_auth_set_introduce">请编辑个人介绍（必填）</string>
    <string name="edit_auth_image_label">形象标签</string>
    <string name="edit_auth_set_image_label">请设置形象标签（必填）</string>
    <string name="nickname_not_emtpy">姓名不能为空！</string>
    <string name="edit_auth_self_introduce">编辑自我介绍</string>
    <string name="edit_auth_self_sign">编辑个性签名</string>
    <string name="edit_auth_tips_id_card_1">请选择身份证正面！</string>
    <string name="edit_auth_tips_id_card_2">请选择身份证反面！</string>
    <string name="loading_upload_info">正在上传信息...</string>
    <string name="home_page_chat">私聊</string>
    <string name="home_page_video">视频聊</string>
    <string name="home_page_gift">送礼物</string>
    <string name="admin_no">取消</string>
    <string name="repulse_call">取消</string>
    <string name="accept_call">接受</string>
    <string name="register">登录</string>
    <string name="verify">验证</string>
    <string name="userinfo_bar_userid">加载中...</string>
    <string name="userinfo_bar_time">通话:0小时</string>
    <string name="userinfo_bar_good">好评:0</string>
    <string name="userinfo_bar_location">外太空</string>
    <string name="userinfo_bar_isonLine">离线</string>
    <string name="userinfo_bar_loveme">关 注</string>
    <string name="userinfo_bar_max">最高</string>
    <string name="count_text_love">关注</string>
    <string name="count_text_fans">粉丝</string>
    <string name="count_number_divide">--</string>
    <string name="count_text_divide">邀请分成比例</string>
    <string name="list_bar_gift_text">收到的礼物（0）</string>
    <string name="list_bar_video_text">小视频（0）</string>
    <string name="list_bar_photo_text">私照（0）</string>
    <string name="register_btn_text">一键微信登录</string>
    <string name="register_logo_text">聊天能赚钱的超好玩APP</string>
    <string name="show_contribution_text">贡献榜</string>
    <string name="show_contribution_text_top">TOP</string>
    <string name="adpter_video_title">一个很健康的小视频</string>
    <string name="left_love_number">---</string>
    <string name="left_start_number">----</string>
    <string name="register_msg_there">其它登录方式</string>
    <string name="terms_of_service_tx">登录即代表你同意</string>
    <string name="terms_of_service">服务和隐私条款</string>
    <string name="call_player_btn">视频</string>
    <string name="share_me_msg">分享有礼</string>
    <string name="share_user_msg">分享有礼</string>
    <string name="call_player_msg_to">正在等待对方接受邀请...</string>
    <string name="join_black_list">加入黑名单</string>
    <string name="report_this_user">举报该用户</string>
    <string name="phone_number_hint">输入手机号</string>
    <string name="phone_code_hint">输入验证码</string>
    <string name="phone_number_digits">0123456789</string>
    <string name="video_chat_msg">送抽奖礼物,与\nta共赢超级大奖</string>
    <string name="people_img_masking">审核中</string>
    <string name="inform_cause_text">举报原因</string>
    <string name="inform_cause_right">请选择</string>
    <string name="inform_cause_hint">请具体描述遇到的情形...</string>
    <string name="inform_cause_img">上传截图（选填）</string>
    <string name="tojoin_cause_text">合作方式</string>
    <string name="tojoin_info_text">联系方式</string>
    <string name="tojoin_cause_hint">请输入您的相关信息和联系方式,3个工作日内联系您!</string>
    <string name="right_text_top">拍摄视频</string>
    <string name="right_text_bottom">上传视频</string>
    <string name="radio_days">日榜</string>
    <string name="radio_weeks">周榜</string>
    <string name="radio_alls">总榜</string>
    <string name="text_my_ranking">我的排名:未上榜</string>
    <string name="chat_hint">发链接,二维码,引导加微信,QQ的都是诈骗,请勿轻信,举报有奖!</string>
    <string name="time_btn">跳过</string>
    <string name="splash_bottom_text">Copyright©2018-2019</string>
    <string name="splash_title">传递快乐 分享生活</string>
    <string name="userpage_moneytext">我的钱包</string>
    <string name="userpage_rechargetext">充值</string>
    <string name="userpage_bytext">购买萌币</string>
    <string name="userpage_alltext">更多购买</string>
    <string name="userpage_msgtext">(首次充值可获免单机会)</string>
    <string name="msg_gird">送礼物</string>
    <string name="msg_send">发送</string>
    <string name="test_text">加载中...</string>
    <string name="test_number">0</string>
    <string name="test_number2">-</string>
    <string name="redact_text1">个人信息</string>
    <string name="redact_text2">个人封面(真实丰富的照片有利于被更多人发现)</string>
    <string name="redact_head">头像</string>
    <string name="redact_name">昵称</string>
    <string name="redact_sex">性别(不可修改)</string>
    <string name="redact_sign">个性签名</string>
    <string name="redact_nametext"></string>
    <string name="redact_sextext">未知</string>
    <string name="dialog_ratio_text1">我的分成比例</string>
    <string name="dialog_ratio_numebr">分成比例速度升90%</string>
    <string name="dialog_ratio_text2">前两日和当日获得的总积分超过一定的数值且邀请6位以上好友注册</string>
    <string name="dialog_ratio_grader">我的等级详情</string>
    <string name="dialog_ratio_invite">邀请</string>
    <string name="bind_mobile">绑定手机</string>
    <string name="plase_input_correct_mobile">请输入正确的手机号码！</string>
    <string name="call">通话:</string>
    <string name="minute">/分钟</string>
    <string name="fans">粉丝</string>
    <string name="on_line">活跃</string>
    <string name="relieve_black">解除拉黑</string>
    <string name="action_success">操作成功!</string>
    <string name="now_call">正在接通...</string>
    <string name="loading_action">操作中...</string>
    <string name="charm">魅力</string>
    <string name="caiqi">财气</string>
    <string name="plase_input_search_content">请输入搜索内容</string>
    <string name="search_error">查询错误</string>
    <string name="plase_select_label">选择形象标签</string>
    <string name="reply_success">评价成功！</string>
    <string name="action_error">操作失败！</string>
    <string name="max_select">最多可选择</string>
    <string name="a_label">个标签</string>
    <string name="edit_info">编辑资料</string>
    <string name="save">保存</string>
    <string name="loading_upload_data">正在提交数据...</string>
    <string name="submit_success">提交成功</string>
    <string name="head_img">头像</string>
    <string name="sex_not_change">性别不可修改!</string>
    <string name="not_change">不可修改</string>
    <string name="edit_nickname">修改昵称</string>
    <string name="edit_sign">修改签名</string>
    <string name="mobile_login_code_not_empty">验证码不能为空!</string>
    <string name="mobile_login_mobile_error">手机号格式不正确!</string>
    <string name="refresh_success">刷新成功!</string>
    <string name="home_page_call">通话:</string>
    <string name="home_page_good">好评:</string>
    <string name="home_page_small_video">小视频</string>
    <string name="home_page_private_photo">私照</string>
    <string name="home_page_send_gift">送出的礼物</string>
    <string name="home_page_received">收到的礼物</string>
    <string name="home_page_loading_call">正在接通...</string>
    <string name="share_wechat">分享到微信</string>
    <string name="share_pyq">分享到朋友圈</string>
    <string name="index">首页</string>
    <string name="video">视频</string>
    <string name="dynamic">动态</string>
    <string name="message">消息</string>
    <string name="me">我的</string>
    <string name="not_have_permission">重要权限被拒绝,将影响功能使用,请去设置中打开</string>
    <string name="reg_nickname_not_empty">昵称不能为空!</string>
    <string name="reg_plase_select_sex">请选择性别!</string>
    <string name="reg_plase_upload_headimg">请选择头像</string>
    <string name="file_not_fount">头像文件不存在</string>
    <string name="upload_data_error">提交信息失败!</string>
    <string name="hang_up">挂断</string>
    <string name="have_been_connected">已接通</string>
    <string name="now_hang_up">正在挂断</string>
    <string name="user_refuse_call">对方拒绝通话</string>
    <string name="please_select_adopt_private_img">请选择审核通过的私照！</string>
    <string name="is_send">是否发送?</string>
    <string name="please_full_video_title">请填写视频标题</string>
    <string name="please_full_video_money">请輸入视频金额</string>
    <string name="upload_success">上传成功</string>
    <string name="please_chose_recharge_rule">请选择充值规则!</string>
    <string name="please_chose_recharge_type">请选择充值方式!</string>
    <string name="loading_now_upload_video">正在上传视频...</string>
    <string name="loading_now_submit_order">正在提交支付订单...</string>
    <string name="loading_login">登录中...</string>
    <string name="code_not_empty">验证码不为空!</string>
    <string name="re_send">重发</string>
    <string name="check">验证</string>
    <string name="login_fail">登录失败！</string>
    <string name="login_cancel">登录取消！</string>
    <string name="please_upload_report_img">请上传举报截图</string>
    <string name="please_chose_report_type">请选择举报类型</string>
    <string name="des_content_not_empty">描述内容不得为空</string>
    <string name="loading_now_submit_data">正在提交信息</string>
    <string name="report_success">举报成功,等待管理员审核!</string>
    <string name="report_fail">提交失败</string>
    <string name="contact_custom_service">联系客服</string>
    <string name="version_to_update">版本更新</string>
    <string name="login_out">退出登录</string>
    <string name="set_call_mony">设置按时付费价格</string>
    <string name="submit">提交</string>
    <string name="please_full_nickname">请填写昵称</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="select_sex_tips">*选择性别后无法更改,请选择真实性别</string>
    <string name="input_title">输入标题</string>
    <string name="buy_select">付费查看</string>
    <string name="please_input_video_money">请输入视频价格</string>
    <string name="push">发布</string>
    <string name="loading_now_call">呼叫中请稍后...</string>
</resources>