<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white_bg"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/redact_text1"
            android:textColor="@color/track_matte"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/redact_head"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/head_img"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>

        <View
            style="@style/h_line"
            android:layout_height="1px" />

        <RelativeLayout
            android:id="@+id/redact_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/redact_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/redact_nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="@string/redact_nametext"
                android:textColor="@color/track_matte"
                android:textSize="13sp" />
        </RelativeLayout>


        <View
            style="@style/h_line"
            android:layout_height="1px" />

        <RelativeLayout
            android:id="@+id/redact_sex"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/redact_sex"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/redact_sextext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="@string/redact_sextext"
                android:textColor="@color/track_matte"
                android:textSize="13sp" />
        </RelativeLayout>

        <View
            style="@style/h_line"
            android:layout_height="1px" />

        <RelativeLayout
            android:id="@+id/redact_sign"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/redact_sign"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/redact_sign_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:text="@string/redact_sextext"
                android:textColor="@color/track_matte"
                android:textSize="13sp" />
        </RelativeLayout>


        <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
            android:background="@color/white_bg"
            android:id="@+id/groupListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white_bg"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/redact_text2"
            android:textColor="@color/track_matte"
            android:textSize="12sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/redact_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp" />


    </LinearLayout>


</ScrollView>