<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <com.tencent.rtmp.ui.TXCloudVideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/icon_close_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#80000000"
            android:orientation="vertical"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/btn_push_short_video_pay"
                android:gravity="center"
                android:hint="@string/input_title"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_size_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/btn_push_short_video_pay"
                    android:text="@string/buy_select"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/et_money"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/btn_push_short_video_pay"
                    android:gravity="center"
                    android:hint="@string/please_input_video_money"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_size_15" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_push"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@mipmap/push_video_btn_bac"
                android:text="@string/push"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
